--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
   },
-  "author": "Yadvendra Shukla",
+  "author": "Erukula Rajasree",
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
